--- a/ui/package.json
+++ b/ui/package.json
@@ -1,20 +1,30 @@
 {
   "name": "ui",
   "version": "1.0.0",
-  "main": "index.js",
   "license": "MIT",
-  "devDependencies": {
-    "@types/vue": "^2.0.0",
-    "@vue/compiler-sfc": "^3.2.2",
-    "typescript": "^4.3.5",
-    "vue": "^2.6.12",
-    "vue-class-component": "^7.2.6",
-    "vue-property-decorator": "^9.1.2",
-    "vue-template-compiler": "^2.6.14"
+  "main": "lib/index.js",
+  "module": "lib/index.esm.js",
+  "scripts": {
+    "build": "rollup -c"
   },
   "peerDependencies": {
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-typescript": "^8.2.5",
+    "@vue/compiler-sfc": "^3.2.2",
+    "rollup": "^2.56.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-vue": "^6.0.0",
+    "tslib": "^2.3.1",
+    "typescript": "^4.3.5",
+    "vue": "^2.6.12",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.1.2",
+    "vue-template-compiler": "^2.6.14"
   }
 }
