--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -3,6 +3,7 @@
     "declarationDir": "lib",
     "target": "es5",
     "module": "es2015",
+    "moduleResolution": "node",
     "sourceMap": true,
     "declaration": true,
     "importHelpers": true,
