--- a/ui/package.json
+++ b/ui/package.json
@@ -13,14 +13,24 @@
     "vue-property-decorator": "^9.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-typescript": "^7.15.0",
+    "@rollup/plugin-alias": "^3.1.5",
+    "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
-    "@rollup/plugin-typescript": "^8.2.5",
+    "@rollup/plugin-replace": "^3.0.0",
     "@vue/compiler-sfc": "^3.2.2",
-    "rollup": "^2.56.2",
+    "@zerollup/ts-transform-paths": "^1.7.18",
+    "minimist": "^1.2.5",
+    "postcss": "^6.0",
+    "rollup": "^2.52.8",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-vue": "^6.0.0",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "rollup-plugin-vue": "^5.1.9",
     "tslib": "^2.3.1",
+    "ttypescript": "^1.5.12",
     "typescript": "^4.3.5",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
