--- a/package.json
+++ b/package.json
@@ -1,6 +1,31 @@
 {
-  "name": "vue-lib-test",
+  "name": "heart",
+  "private": true,
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "workspaces": {
+    "packages": [
+      "ui",
+      "core"
+    ]
+  },
+  "scripts": {
+    "clean": "lerna clean --yes && rimraf node_modules",
+    "pkg": "manypkg run",
+    "pkg:check": "manypkg check",
+    "pkg:fix": "manypkg fix",
+    "postinstall": "yarn pkg:check",
+    "prestart": "yarn && yarn bootstrap",
+    "boot": "yarn prestart && yarn build",
+    "build": "lerna run build --ignore core --no-private --stream",
+    "bootstrap": "lerna bootstrap --use-workspaces",
+    "lint": "lerna run lint --no-private --stream"
+  },
+  "dependencies": {
+    "@manypkg/cli": "^0.18.0",
+    "cross-env": "^7.0.3",
+    "lerna": "^4.0.0",
+    "rimraf": "^3.0.2"
+  }
 }
