--- a/ui/package.json
+++ b/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui",
+  "name": "@heart/ui",
   "version": "1.0.0",
   "license": "MIT",
   "main": "lib/index.js",
@@ -11,6 +11,7 @@
   ],
   "scripts": {
     "prebuild": "rimraf ./lib",
+    "start": "cross-env NODE_ENV=production rollup -cw --format es",
     "build": "cross-env NODE_ENV=production rollup -c",
     "build:cjs": "cross-env NODE_ENV=production rollup -c --format cjs",
     "build:es": "cross-env NODE_ENV=production rollup -c --format es",
@@ -30,6 +31,7 @@
     "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
     "@rollup/plugin-replace": "^3.0.0",
+    "@types/node": "^16.6.1",
     "@vue/compiler-sfc": "^3.2.2",
     "@zerollup/ts-transform-paths": "^1.7.18",
     "cross-env": "^7.0.3",
@@ -40,6 +42,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-typescript2": "^0.30.0",
     "rollup-plugin-vue": "^5.1.9",
+    "ts-node": "^10.2.0",
     "tslib": "^2.3.1",
     "ttypescript": "^1.5.12",
     "typescript": "^4.3.5",
