--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
   "packages": [
-    "ui",
-    "core"
+    "packages/ui",
+    "packages/core"
   ],
   "version": "1.0.0",
   "npmClient": "yarn",
