--- a/package.json
+++ b/package.json
@@ -6,21 +6,22 @@
   "license": "MIT",
   "workspaces": {
     "packages": [
+      "demo",
       "packages/ui",
       "packages/core"
     ]
   },
   "scripts": {
-    "clean": "lerna clean --yes && rimraf node_modules",
-    "pkg": "manypkg run",
-    "pkg:check": "manypkg check",
-    "pkg:fix": "manypkg fix",
-    "postinstall": "yarn pkg:check",
-    "prestart": "yarn && yarn bootstrap",
     "boot": "yarn prestart && yarn build",
     "build": "lerna run build --ignore @heart/core --no-private --stream",
+    "clean": "lerna clean --yes && rimraf node_modules",
+    "postinstall": "yarn pkg:check",
+    "prestart": "yarn && yarn bootstrap",
     "bootstrap": "lerna bootstrap --use-workspaces",
-    "lint": "lerna run lint --no-private --stream"
+    "lint": "lerna run lint --no-private --stream",
+    "pkg": "manypkg run",
+    "pkg:check": "manypkg check",
+    "pkg:fix": "manypkg fix"
   },
   "dependencies": {
     "@manypkg/cli": "^0.18.0",
