--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,9 +20,14 @@
     "clean": "rimraf ./lib"
   },
   "peerDependencies": {
-    "vue": "^2.6.12",
-    "vue-class-component": "^7.2.6",
-    "vue-property-decorator": "^9.1.2"
+    "@vue/composition-api": "^1.1.1",
+    "vue": "^2.6.4",
+    "vuetify": "^2.5.8"
+  },
+  "peerDependenciesMeta": {
+    "@vue/composition-api": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
@@ -35,6 +40,7 @@
     "@rollup/plugin-replace": "^3.0.0",
     "@types/node": "^16.6.1",
     "@vue/compiler-sfc": "^3.2.2",
+    "@vue/composition-api": "^1.1.1",
     "@zerollup/ts-transform-paths": "^1.7.18",
     "cross-env": "^7.0.3",
     "minimist": "^1.2.5",
@@ -48,9 +54,10 @@
     "tslib": "^2.3.1",
     "ttypescript": "^1.5.12",
     "typescript": "^4.3.5",
-    "vue": "^2.6.12",
+    "vue": "^2.6.4",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "vuetify": "^2.5.8"
   }
 }
