--- a/demo/package.json
+++ b/demo/package.json
@@ -20,7 +20,7 @@
     "@vue/compiler-sfc": "^3.2.2",
     "@vue/composition-api": "^1.1.1",
     "sass": "1.32.5",
-    "sass-loader": "10.0.0",
+    "sass-loader": "^10.2.0",
     "typescript": "^4.3.5",
     "vite": "^2.4.4",
     "vite-plugin-components": "^0.13.2",
