--- a/storybook/package.json
+++ b/storybook/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "sass": "1.32.0",
+    "sass": "1.32.5",
     "sass-loader": "^10.2.0",
-    "vue": "^2.6.11",
-    "vuetify": "^2.4.0",
+    "vue": "^2.6.4",
+    "vuetify": "^2.5.8",
     "webpack": "^4.36.0"
   },
   "devDependencies": {
@@ -39,9 +39,9 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^2.2.1",
-    "typescript": "~4.1.5",
+    "typescript": "^4.3.5",
     "vue-cli-plugin-vuetify": "~2.4.2",
-    "vue-template-compiler": "^2.6.11",
+    "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^1.7.0"
   },
   "resolutions": {
